--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mama-watoto-africa",
   "version": "0.1.1",
   "keywords": [],
-  "author": "Greg Willson <acmeideal@gmail.com> (https://scdhub.org/)",
+  "author": "Greg Willson <greg@ecocity.com> (https://scdhub.org/)",
   "repository": {
     "type": "git",
     "url": "https://github.com/biomassives/Next-DatoCMS-Template.git"
